fix rules panel for dark theme on mobile

--- a/src/assets/rulesPanel.css
+++ b/src/assets/rulesPanel.css
@@ -21,6 +21,7 @@ h1 {
     font-weight: bold;
     margin-bottom: 0.5em;
     text-align: center;
+    color: black;
 }
 
 .close-button {
@@ -55,6 +56,7 @@ h1 {
     cursor: pointer;
     font-size: 1.25em;
     font-weight: bold;
+    color: black;
     padding: 0.5em 0;
     border: 1px solid #ccc;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -73,6 +75,7 @@ h1 {
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
+    color: black;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     will-change: opacity, transform;
 }
@@ -95,6 +98,7 @@ ul {
     justify-content: flex-start;
     flex-wrap: wrap;
     transform-origin: top;
+    color: black;
   }
   
 .tabs button {
@@ -130,6 +134,7 @@ th {
     text-align: center;
     background-color: #f9f9f9;
     font-weight: bold;
+    color:black;
 }
 
 td {
@@ -137,6 +142,7 @@ td {
     border-right: 1px solid #ccc;
     padding: 0.75em;
     text-align: center;
+    color: black;
 }
 
 .joker{
